--- a/css/features.css
+++ b/css/features.css
@@ -12263,10 +12263,10 @@ html {
 }
 
 .navbar-custom .navbar-brand {
-  text-transform: uppercase;
-  font-size: 1rem;
+  /* text-transform: uppercase; */
+  font-size: 2rem;
   letter-spacing: 0.1rem;
-  font-weight: 700;
+  font-weight: 500;
 }
 
 .navbar-custom .navbar-nav .nav-item .nav-link {
