--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,7 @@
 @charset "UTF-8";
+/* @import url('https://fonts.googleapis.com/css2?family=Corinthia:wght@700&family=Estonia&family=Meow+Script&display=swap'); */
+@import url('https://fonts.googleapis.com/css2?family=Corinthia:wght@400;700&family=Estonia&family=Meow+Script&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Corinthia:wght@400;700&family=Estonia&family=Meow+Script&family=MonteCarlo&family=Ubuntu&display=swap');
 
 /*!
 * Start Bootstrap - One Page Wonder v6.0.5 (https://startbootstrap.com/theme/one-page-wonder)
@@ -175,6 +178,7 @@ h3,
 
   h3,
   .h3 {
+    margin-top: -20px;
     font-size: 1.75rem;
   }
 }
@@ -292,7 +296,7 @@ a {
 }
 
 a:hover {
-  color: #be0761;
+  color: rgb(249, 69, 108) !important;
 }
 
 a:not([href]):not([class]),
@@ -767,6 +771,7 @@ progress {
   --bs-gutter-y: 0;
   display: flex;
   flex-wrap: wrap;
+  align-items: baseline;
   margin-top: calc(-1 * var(--bs-gutter-y));
   margin-right: calc(-0.5 * var(--bs-gutter-x));
   margin-left: calc(-0.5 * var(--bs-gutter-x));
@@ -4626,7 +4631,7 @@ fieldset:disabled .btn {
 .navbar>.container-xxl {
   display: flex;
   flex-wrap: inherit;
-  align-items: center;
+  align-items: flex-end;
   justify-content: space-between;
 }
 
@@ -5143,11 +5148,11 @@ fieldset:disabled .btn {
 
 .navbar-dark .navbar-brand:hover,
 .navbar-dark .navbar-brand:focus {
-  color: rgb(252, 250, 252);
+  color: rgb(254, 240, 240);
 }
 
 .navbar-dark .navbar-nav .nav-link {
-  color: rgba(255, 255, 255, 0.911);
+  color: rgba(255, 241, 241, 0.718);
 }
 
 .navbar-dark .navbar-nav .nav-link:hover,
@@ -10647,6 +10652,7 @@ fieldset:disabled .btn {
 
   .mb-lg-0 {
     margin-bottom: 0 !important;
+    margin-top: -30px;
   }
 
   .mb-lg-1 {
@@ -12309,10 +12315,14 @@ header.masthead .masthead-content {
 
 header.masthead .masthead-content .masthead-heading {
   font-size: 4rem;
+  font-family: 'Corinthia', cursive;
 }
 
 header.masthead .masthead-content .masthead-subheading {
   font-size: 50px !important;
+  /* font-weight: 400; */
+  font-family: 'Ubuntu', sans-serif;
+  padding: 10px 0;
 }
 
 header.masthead .bg-circle {
@@ -12358,6 +12368,8 @@ header.masthead .bg-circle-4 {
 
   header.masthead .masthead-content .masthead-heading {
     font-size: 6rem;
+    font-family: 'Corinthia', cursive;
+    margin-bottom: 10px !important;
   }
 
   header.masthead .masthead-content .masthead-subheading {
@@ -12442,34 +12454,39 @@ i {
 
 .text-uppercase {
   text-align: center;
+  margin-left: -10px;
 }
 
 .pers {
   display: flex;
   padding: 0 20px;
+  margin-top: -40px;
 }
 
 .pe {
   float: center;
   width: calc(100% / 2);
   overflow: hidden;
-  padding: 40px 0;
+  padding: 20px 0;
   transition: 0.4s;
-  margin: 0 20px;
+  margin: 20px 20px;
 }
 
 .pe:hover {
-  background: #dfe4ea;
+  background-color: #dfe4ea !important;
 }
 
 .pe img {
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
+  width: 120px;
+  height: 150px;
+  object-fit: cover;
+  object-position: 0 20%;
+  border-radius: 10% 20%;
 }
 
 .p-name {
   margin: 5px;
+  margin-left: 18px;
 }
 
 .p-des {
@@ -12479,6 +12496,8 @@ i {
 
 .p-sm {
   margin-top: 3px;
+  display: flex;
+  justify-content: space-evenly;
 }
 
 .p-sm a {
@@ -12491,10 +12510,11 @@ i {
 
 .p-sm a:hover {
   transform: scale(1.3);
+  color: rgb(178, 25, 53);
 }
 
 .p-sm a i {
-  color: #333;
+  color: rgb(178, 25, 53);
   line-height: 10px;
 }
 
