--- a/period tracker/about.css
+++ b/period tracker/about.css
@@ -12,8 +12,9 @@ body {
     padding-right: 50px;
     padding-top: 50px;
     padding-bottom: 50px;
-    background-color: rgba(0, 0, 0, 0.6);
-    color: antiquewhite;
+    border-radius: 3.6rem;
+    background-color: rgba(255, 255, 255, 0.6);
+    color: rgb(99, 32, 46);
 }
 
 h1 {
