--- a/pregnancy_tracker/style.css
+++ b/pregnancy_tracker/style.css
@@ -13,7 +13,7 @@
 }
 
 html {
-	background: url(3.jpg) no-repeat center center fixed;
+	background: url(4.jpg) no-repeat center center fixed;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
@@ -33,12 +33,18 @@ body {
 input {
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: var(--font-size);
+	border-radius: 10px;
+	background-color: #fee6a25b;
+	color: #650f26;
+	margin-left: -10px;
+	padding: 5px 2px;
+	border-color: #ffffff;
 }
 
 h1 {
 	text-align: center;
 	font-family: 'Merriweather', sans-serif;
-	color: #f1ebeb;
+	color: #ffffff;
 }
 
 .form-center {
@@ -49,11 +55,13 @@ h1 {
 	padding-bottom: 150px;
 	display: flex;
 	justify-content: center;
-	background-color: rgba(0, 0, 0, .3);
+	background-color: rgba(242, 110, 125, 0.438);
 	border: #BCC7AF;
 	width: 300px;
 	height: 100px;
 	box-decoration-break: slice;
+	border-radius: 30px;
+	margin-top: 50px;
 }
 
 .align {
@@ -76,11 +84,12 @@ h1 {
 
 .btn-update {
 	font-size: 25px;
-	background-color: rgba(0, 0, 0, .3);
-	color: rgb(230, 230, 230);
+	background-color: rgba(200, 172, 123, 0.421);
+	color: rgb(255, 255, 255);
 	border: 2px solid #dcecdd;
-	border-radius: 5px;
-	box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+	border-radius: 15px;
+    box-shadow: 0 8px 16px 0 rgb(0 0 0 / 20%), 0 6px 20px 0 rgb(0 0 0 / 19%);
+    padding: 2px 12px;
 }
 
 .btn-reset {
@@ -94,11 +103,12 @@ h1 {
 
 .btn-reset {
 	font-size: 25px;
-	background-color: rgba(0, 0, 0, .3);
-	color: rgb(230, 230, 230);
+	background-color: rgba(188, 167, 124, 0.3);
+	color: rgb(255, 255, 255);
 	border: 2px solid #dcecdd;
-	border-radius: 5px;
-	box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+	border-radius: 15px;
+    box-shadow: 0 8px 16px 0 rgb(0 0 0 / 20%), 0 6px 20px 0 rgb(0 0 0 / 19%);
+    padding: 2px 11px;
 }
 
 table {
@@ -241,26 +251,27 @@ td {
 .month-container {
 	border: var(--border);
 	border-radius: 0.5em;
-	background-color: rgba(0, 0, 0, 0.5);
-	border-color: yellow;
+	background-color: rgb(228 94 121 / 46%);
+    border-color: #410251;
 }
 
 .grid-calendar {
 	display: grid;
 	grid-template-columns: repeat(7, 1fr);
 	gap: 0.5em;
-	color: #e4dbeb;
+	color: #350f16;
 }
 
 .month-header {
 	font-weight: bold;
 	padding: var(--cal-padding) var(--cal-padding) 0 var(--cal-padding);
+	color: #fffffd;
 }
 
 .month-weekdays {
 	text-align: center;
 	font-size: 80%;
-	color: yellow;
+	color: #25072c;
 	padding: 0 var(--cal-padding);
 }
 
@@ -293,13 +304,15 @@ td {
 }
 
 .calendar-day.pregnancy-day.today {
-	background-color: var(--yellow-90);
-	font-weight: bold;
-	border-color: var(--yellow-50);
+	background-color: hsl(349deg 98% 32%);
+	color: white;
+    font-weight: bold;
+    border-color: rgb(251 223 213);;
 }
 
 .calendar-day.has-note {
-	background-color: rgb(62, 62, 187);
+	background-color: rgb(93 17 88);
+	color: white;
 }
 
 .calendar-day.active::after,
@@ -372,11 +385,11 @@ td {
 #google_translate_element select {
 	position: absolute;
 	right: 0px;
-	background: #00000075;
+	background: #e45e7885;
 	color: #f1f1f1;
 	/* border: none; */
 	border-radius: 3px;
-	border-color: #f1f1f1;
+	border-color: #fffdfd;
 	padding: 6px 8px;
 	font-family: 'Merriweather', sans-serif;
 	font-size: 16px;
